# triton

bazel/: .bazelrc  WORKSPACE.bazel  configure.bzl
bazel/triton-overlay/: BUILD.bazel
lib/Dialect/Triton/IR/: Ops.cpp
lib/Dialect/TritonGPU/IR/: Dialect.cpp
python/triton/: compiler.py
