load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure", "llvm_disable_optional_support_deps")

new_local_repository(
    name = "triton-raw",
    build_file_content = "# empty",
    path = "../",
)

load("@triton-raw//bazel:configure.bzl", "triton_configure")

triton_configure(
    name = "triton",
)
